gitops/env/prod/qrly-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qrly-ingress
  namespace: qrly
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: bitelink-tls
      hosts:
        - bitelink.pl
        - app.bitelink.pl
        - api.bitelink.pl
  rules:
    - host: bitelink.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing-service
                port:
                  number: 80
    - host: app.bitelink.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: api.bitelink.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
